--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "twig/twig": "~2.0",
         "phpmailer/phpmailer": "~6.0",
         "hassankhan/config": "0.11.*",
-        "illuminate/database": "6.20.12",
+        "illuminate/database": "6.20.14"
         "alexgarrett/violin": "2.*",
         "ircmaxell/random-lib": "~1.1"
     }
